[gd_scene load_steps=19 format=3 uid="uid://bawlx51f7kap7"]

[ext_resource type="Script" uid="uid://dphmed5fc2pii" path="res://scripts/difficulty_screen.gd" id="1_gq2fb"]
[ext_resource type="FontFile" uid="uid://ptmgpl8e12t8" path="res://textFonts/DynaPuff-VariableFont_wdth,wght.ttf" id="1_hkr2i"]
[ext_resource type="AudioStream" uid="uid://ct3u7b68kcxh0" path="res://audio_effects/mouse-click-sound.mp3" id="2_8q7bi"]

[sub_resource type="Animation" id="Animation_iwd8f"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("OptionsPanel/VBoxContainer/EasyButton:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("OptionsPanel/VBoxContainer/MediumButton:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("OptionsPanel/VBoxContainer/HardButton:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("OptionsPanel:self_modulate:a")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1.0]
}

[sub_resource type="Animation" id="Animation_gq2fb"]
resource_name = "START"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("OptionsPanel:self_modulate:a")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(3.1383364, 1),
"update": 0,
"values": [1.0, 0.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("OptionsPanel/Label:self_modulate:a")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(3.1383364, 1),
"update": 0,
"values": [1.0, 0.0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("OptionsPanel/VBoxContainer/EasyButton:self_modulate:a")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(3.1383364, 1),
"update": 0,
"values": [1.0, 0.0]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("OptionsPanel/VBoxContainer/MediumButton:self_modulate:a")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(3.1383364, 1),
"update": 0,
"values": [1.0, 0.0]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("OptionsPanel/VBoxContainer/HardButton:self_modulate:a")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(3.1383364, 1),
"update": 0,
"values": [1.0, 0.0]
}

[sub_resource type="Animation" id="Animation_8q7bi"]
resource_name = "show_labels"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("OptionsPanel/VBoxContainer/EasyButton:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.40000004),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("OptionsPanel/VBoxContainer/MediumButton:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.45),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("OptionsPanel/VBoxContainer/HardButton:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ku3li"]
_data = {
&"RESET": SubResource("Animation_iwd8f"),
&"START": SubResource("Animation_gq2fb"),
&"show_buttons": SubResource("Animation_8q7bi")
}

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_gq2fb"]
bg_color = Color(0.23013797, 0.12601525, 0.045609973, 1)
border_width_left = 15
border_width_top = 15
border_width_right = 15
border_width_bottom = 15
border_color = Color(0.29667833, 0.14560682, 0.018424379, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="LabelSettings" id="LabelSettings_8q7bi"]
font = ExtResource("1_hkr2i")
font_size = 70
outline_size = 10
outline_color = Color(0, 0, 0, 1)
shadow_size = 10
shadow_color = Color(0, 0, 0, 1)
shadow_offset = Vector2(2, 2)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_hkr2i"]
bg_color = Color(0.36396325, 0.69282144, 0.2713561, 1)
border_width_left = 10
border_width_top = 10
border_width_right = 10
border_width_bottom = 10
border_color = Color(0.3433332, 0.5460962, 0.06794301, 1)
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_5eso7"]
bg_color = Color(0.2769572, 0.53033566, 0.20508313, 1)
border_width_left = 10
border_width_top = 10
border_width_right = 10
border_width_bottom = 10
border_color = Color(0.2784314, 0.5294118, 0.20392157, 1)
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ois7d"]
bg_color = Color(1, 1, 1, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_8q7bi"]
bg_color = Color(0.6604843, 0.63778025, 0.12541282, 1)
border_width_left = 10
border_width_top = 10
border_width_right = 10
border_width_bottom = 10
border_color = Color(0.44705883, 0.43137255, 0.078431375, 1)
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_so0ns"]
bg_color = Color(0.460585, 0.4466498, 0.08214752, 1)
border_width_left = 10
border_width_top = 10
border_width_right = 10
border_width_bottom = 10
border_color = Color(0.45882353, 0.44705883, 0.08235294, 1)
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ncl2a"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_iwd8f"]
bg_color = Color(0.83458817, 0.23707727, 0.16417629, 1)
border_width_left = 10
border_width_top = 10
border_width_right = 10
border_width_bottom = 10
border_color = Color(0.7044758, 0, 0.06875707, 1)
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ku3li"]
bg_color = Color(0.53893185, 0.1271232, 0.08010822, 1)
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_3rtvh"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[node name="DifficultyScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_gq2fb")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
unique_name_in_owner = true
libraries = {
&"": SubResource("AnimationLibrary_ku3li")
}

[node name="ButtonPlayer" type="AudioStreamPlayer" parent="."]
unique_name_in_owner = true
stream = ExtResource("2_8q7bi")
bus = &"Sfx"

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 8.0
offset_bottom = 6.0
color = Color(0, 0, 0, 1)

[node name="OptionsPanel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.29114923
anchor_top = 0.2662037
anchor_right = 0.7088508
anchor_bottom = 0.73379636
offset_left = 0.7999878
offset_top = -0.50001526
offset_right = -0.8000488
offset_bottom = 0.49993896
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_gq2fb")
metadata/_edit_use_anchors_ = true

[node name="Label" type="Label" parent="OptionsPanel"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.075
anchor_top = 0.095000006
anchor_right = 0.9250001
anchor_bottom = 0.263
offset_left = 0.16445541
offset_top = -0.07000351
offset_right = -0.16448975
offset_bottom = -0.07800293
grow_horizontal = 2
text = "Choose a difficulty:"
label_settings = SubResource("LabelSettings_8q7bi")

[node name="VBoxContainer" type="VBoxContainer" parent="OptionsPanel"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.15400001
anchor_top = 0.316
anchor_right = 0.846
anchor_bottom = 0.91700006
offset_left = -0.2679062
offset_top = -0.17404175
offset_right = 0.066101074
offset_bottom = 0.7199707
grow_horizontal = 2
grow_vertical = 0
theme_override_constants/separation = 13
alignment = 1

[node name="EasyButton" type="Button" parent="OptionsPanel/VBoxContainer" groups=["Interactive"]]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_hover_color = Color(0.8745098, 0.8745098, 0.8745098, 1)
theme_override_fonts/font = ExtResource("1_hkr2i")
theme_override_font_sizes/font_size = 60
theme_override_styles/normal = SubResource("StyleBoxFlat_hkr2i")
theme_override_styles/pressed = SubResource("StyleBoxFlat_5eso7")
theme_override_styles/hover = SubResource("StyleBoxFlat_hkr2i")
theme_override_styles/focus = SubResource("StyleBoxFlat_ois7d")
text = "Easy"

[node name="MediumButton" type="Button" parent="OptionsPanel/VBoxContainer" groups=["Interactive"]]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_hover_color = Color(0.8745098, 0.8745098, 0.8745098, 1)
theme_override_fonts/font = ExtResource("1_hkr2i")
theme_override_font_sizes/font_size = 60
theme_override_styles/normal = SubResource("StyleBoxFlat_8q7bi")
theme_override_styles/pressed = SubResource("StyleBoxFlat_so0ns")
theme_override_styles/hover = SubResource("StyleBoxFlat_8q7bi")
theme_override_styles/focus = SubResource("StyleBoxFlat_ncl2a")
text = "Medium
"

[node name="HardButton" type="Button" parent="OptionsPanel/VBoxContainer" groups=["Interactive"]]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_hover_color = Color(0.8745098, 0.8745098, 0.8745098, 1)
theme_override_fonts/font = ExtResource("1_hkr2i")
theme_override_font_sizes/font_size = 60
theme_override_styles/normal = SubResource("StyleBoxFlat_iwd8f")
theme_override_styles/pressed = SubResource("StyleBoxFlat_ku3li")
theme_override_styles/hover = SubResource("StyleBoxFlat_iwd8f")
theme_override_styles/focus = SubResource("StyleBoxFlat_3rtvh")
text = "Hard
"

[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_finished"]
[connection signal="pressed" from="OptionsPanel/VBoxContainer/EasyButton" to="." method="_on_easy_button_pressed"]
[connection signal="pressed" from="OptionsPanel/VBoxContainer/MediumButton" to="." method="_on_medium_button_pressed"]
[connection signal="pressed" from="OptionsPanel/VBoxContainer/HardButton" to="." method="_on_hard_button_pressed"]
